--- a/src/views/Post/scss/index.scss
+++ b/src/views/Post/scss/index.scss
@@ -1,29 +1,130 @@
 @import "../../../globalStyles/scss/variables.scss";
 
 .post-page {
+  padding-top: 125px;
   background-color: $white;
-
-  .breadcrumbs {
-    background-color: $white;
-    padding: $spacer / 2 $spacer $spacer / 2 $spacer * 1.5;
-    margin-top: $spacer * 2;
+  &_mx-auto {
+    margin-left: auto!important;
+    margin-right: auto!important;
   }
-
   &__post {
     display: flex;
     margin-top: $spacer;
-    padding-bottom: $spacer * 5;
+    padding-bottom: $spacer * 3;
 
     @media (max-width: $small-screen) {
       display: block;
       margin-bottom: $spacer * 2;
     }
-
-    &__description {
+    &__title {
+      font-weight: bold;
+      font-size: 34px;
+      color: #444;
+      margin: 15px 0 30px;
+    }
+    &__content {
       width: 100%;
       min-height: $spacer * 10;
       margin-bottom: $spacer * 9; 
+      text-align: justify;
+
+    blockquote{
+        margin-top: 12px;
+        margin-bottom: 12px;
+        font-size: 1.4em;
+        font-family:Open Sans;
+        font-style:italic;
+        color: #555555;
+        padding:1.2em 30px 1.2em 75px;
+        border-left:8px solid #3a3973 ;
+        line-height:1.6;
+        position: relative;
+        background:#fdfdfd;
+      }
+      
+      blockquote::before{
+        font-family:Arial;
+        content: "\201C";
+        color:#3a3973;
+        font-size:4em;
+        position: absolute;
+        left: 10px;
+        top:-10px;
+      }
+      
+      .blockquote::after{
+        content: '';
+      }
+      
+      blockquote span{
+        display:block;
+        color:#333333;
+        font-style: normal;
+        font-weight: bold;
+        margin-top:1em;
+      }
+      ul {
+        padding-top: 6px;
+        padding-bottom: 6px;
+        list-style-type: "*";
+      }
+      ul li {
+        list-style: none;
+        position: relative;
+        padding: 3px 0 2px 25px;
+      }
+      
+      ul li::before {
+        content: '*';
+        position: absolute;
+        top: 6px;
+        left: 0;
+      }
+      ol {
+        padding-top: 6px;
+        padding-bottom: 6px;
+        line-height: 2;
+      }
+      ol li {
+        list-style-type: none;
+        counter-increment: item;
+      }
+      
+      ol li:before {
+        content: counter(item);
+        display: inline-block;
+        width: 12px;
+        height: 20px;
+        font-family: "Indie Flower", cursive;
+        margin-right: 5px;
+        background-color: #f9dd94;
+        color: #7eb4e2;
+        font-weight: bold;
+        font-size: 140%;
+        padding: 0 8px 8px;
+        border-radius: 3px;
+        line-height: 1.3;
+      }
+      del,
+      ins {
+        &:before,
+        &:after {
+          clip-path: inset(100%);
+          clip: rect(1px, 1px, 1px, 1px);
+          height: 1px;
+          overflow: hidden;
+          position: absolute;
+          white-space: nowrap;
+          width: 1px;
+        }
+      }
+      
+      del {
+        text-decoration-color: red;
+      }
+
     }
+
 
     &__info {
       flex-grow: 1;
