--- a/src/components/ServicesList/scss/index.scss
+++ b/src/components/ServicesList/scss/index.scss
@@ -1,6 +1,6 @@
 .services-list {
   padding: 2rem 0 4rem;
-  background-color: #ffffff;
+  background-color: rgb(243, 245, 249);
 }
 .mb-4 {
   margin-bottom: 3.5rem!important;
