--- a/src/views/Home/scss/index.scss
+++ b/src/views/Home/scss/index.scss
@@ -9,7 +9,7 @@ h3.h3 {
 }
 .product-grid4 {
   position: relative;
-  font-family: 'Jost' ,sans-serif;
+  font-family: 'Simplifica',sans-serif;
   text-align: center;
   border-radius: 5px;
   overflow: hidden;
@@ -225,7 +225,7 @@ h3.h3 {
   }
 }
 .product-grid8 {
-  font-family: 'Jost',sans-serif;
+  font-family: 'Simplifica',sans-serif;
   position: relative;
   z-index: 1;
   .product-image8 {
