--- a/src/components/MainMenu/scss/index.scss
+++ b/src/components/MainMenu/scss/index.scss
@@ -5,7 +5,7 @@
 }
 
 .main-menu {
-  font-size: 16px;
+  font-size: 20px;
   align-items: center;
   align-items: stretch;
   background-color: $white;
@@ -15,12 +15,14 @@
   height: 90px;
   position: relative;
   text-transform: capitalize;
+  font-family: 'Simplifica';
   
   &__left {
     flex-basis: calc(50% - 2rem);
 
     @media (min-width: $small-screen) {
       flex-basis: calc(50% - 4rem);
+      padding-left: 40px;
     }
 
     ul {
@@ -122,8 +124,13 @@
   }
 
   &__icon {
-    padding: 0 $spacer;
+    padding-right: $spacer;
+    padding-left: 5px;
     cursor: pointer;
+
+    @media (min-width: $small-screen) {
+       padding: 0 $spacer;
+    } 
 
     svg * {
       transition: 0.3s;
