--- a/src/components/SkillsList/scss/index.scss
+++ b/src/components/SkillsList/scss/index.scss
@@ -16,6 +16,7 @@
   height: auto;
   max-width: 100%;
   vertical-align: top;
+  border-radius: 20px;
 }
 
 .skills-content {
@@ -34,14 +35,15 @@
     list-style: none;
     & li {
     position: relative;
-    padding-left: 25px;
+    padding-left: 35px;
     margin-bottom: 15px;
     line-height: 1.5;
+    text-align: justify;
       &:before {
         content: '✓';  
         position: absolute;
         top: -0.3rem;
-        font-size: 20px;
+        font-size: 30px;
         left: 0;
       }
     }
